[gd_scene load_steps=14 format=3 uid="uid://bayla3pm7wq78"]

[ext_resource type="Script" path="res://Scenes/Components/Player/Shield Module.gd" id="1_0qxpu"]
[ext_resource type="AudioStream" uid="uid://derfs2gmyr7o" path="res://Audio/Objects/Player/Tank/shield charge.mp3" id="2_2fan6"]
[ext_resource type="AudioStream" uid="uid://cn7uelhcqwpic" path="res://Audio/Objects/Player/Tank/shieldrecharge.mp3" id="3_054u1"]
[ext_resource type="AudioStream" uid="uid://3683cg1d36r0" path="res://Audio/Objects/Player/Tank/shiledubrst.mp3" id="4_qwtie"]
[ext_resource type="Texture2D" uid="uid://igcxemyvhpwg" path="res://Art/Particles/electric.svg" id="5_3y8f0"]
[ext_resource type="PackedScene" uid="uid://cjpkpflus3c0r" path="res://Scenes/Components/Environment/ability_power_controller.tscn" id="6_xx24b"]

[sub_resource type="Gradient" id="Gradient_5pbub"]
offsets = PackedFloat32Array(0, 0.127946, 0.141414, 0.188552, 0.242424, 0.323232, 0.40404, 1)
colors = PackedColorArray(0.960784, 0.843137, 0.615686, 0, 0.729412, 0.729412, 0.729412, 0, 0.648438, 0.492188, 0.175781, 1, 0.988896, 0.952653, 0.88381, 1, 0.965194, 0.860316, 0.657745, 1, 0.652344, 0.53125, 0.292969, 1, 0.981702, 0.931118, 0.830156, 0.0526316, 1, 0.953333, 0.86, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_g84nx"]
gradient = SubResource("Gradient_5pbub")

[sub_resource type="Curve" id="Curve_w6kh2"]
min_value = -370.0
max_value = 368.19
_data = [Vector2(0, -10), 0.0, 0.0, 0, 0, Vector2(0.41, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_sdrlx"]
curve = SubResource("Curve_w6kh2")

[sub_resource type="Curve" id="Curve_mdetc"]
_data = [Vector2(0, 0.747368), 0.0, 0.0, 0, 0, Vector2(0.164634, 1), 0.0, 0.0, 0, 0, Vector2(0.298781, 0.473684), 0.0, 0.0, 0, 0, Vector2(0.542683, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_edt4k"]
curve = SubResource("Curve_mdetc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wsogl"]
lifetime_randomness = 0.13
emission_shape = 2
emission_sphere_radius = 57.16
particle_flag_align_y = true
direction = Vector3(1, 1, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
radial_accel_min = 70.45
radial_accel_max = 88.64
radial_accel_curve = SubResource("CurveTexture_sdrlx")
angle_min = -163.6
angle_max = 147.3
scale_min = 0.02
scale_max = 0.03
scale_curve = SubResource("CurveTexture_edt4k")
color = Color(0.960784, 0.960784, 0.960784, 1)
color_ramp = SubResource("GradientTexture1D_g84nx")
hue_variation_min = -0.01
hue_variation_max = 0.01

[node name="Shield Module" type="Node2D"]
script = ExtResource("1_0qxpu")

[node name="ShieldRecharge" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_2fan6")
volume_db = 1.0
bus = &"Sounds"

[node name="ShieldReady" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_054u1")
volume_db = 1.809
bus = &"Sounds"

[node name="ShieldBurst" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_qwtie")
volume_db = 3.0
bus = &"Sounds"

[node name="Sparks" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -8)
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_wsogl")
texture = ExtResource("5_3y8f0")
lifetime = 0.9
explosiveness = 0.06
randomness = 0.4
fixed_fps = 60
visibility_rect = Rect2(-676.321, -636.396, 1348.38, 1271.19)
local_coords = true
trail_enabled = true
trail_lifetime = 0.36
trail_sections = 2
trail_section_subdivisions = 1

[node name="AbilityPowerController" parent="." instance=ExtResource("6_xx24b")]
ability_name = "shield"
powered = false
